--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -4,7 +4,6 @@
 }
 
 #first-header{
-  position: relative;
   font-family: 'EB Garamond', serif;
   font-weight: bold;
   font-size: 50px;
@@ -22,8 +21,6 @@
   margin-top: 30px;
   font-family: 'EB Garamond', serif;
   font-weight: bold;
-
-
 }
 
 #cities{
@@ -154,7 +151,7 @@
   left: 1000px;
   bottom: 170px;
 }
-
+/* 
 #places img {
   display: block;
 	width: 700px;
@@ -163,28 +160,20 @@
   margin-right: auto;
   box-shadow: 3px 3px 6px #005070;
   
-}
+} */
 
-
+/* 
 #places h3{
-   /* clear: both; */
     font-size: 50px;
     font-weight: bold;
+    color: #005070;
     position: relative;
     bottom: 570px;
     margin-left: 325px;
     font-family: 'EB Garamond', serif;
-    color: #005070;
-
-
 }
-
+ */
 /* 
-.container{
-  margin-left: 50px;
-  position: relative;
-  bottom: 400px;
-} */
 
 #places p{
     font-size: 19px;
@@ -194,130 +183,385 @@
     color: black;
     position: relative;
     top: 500px;
-   }
+} */
 
- footer {
+#prgh{
+  font-size: 18px;
+  color: black;
+}
+
+#prgh2{
+  font-size: 18px;
+  color: black;
+}
+
+#alaraysPool img{
+  width: 500px;
+  height: 350px;
+  margin-left: 70px;
+  /* border: solid 2px black; */
+  box-shadow: black 2px 2px 4px;
+}
+
+#alaraysPool h3{
+  font-size: 25px;
+  margin-left: 70px;
+  width: 500px;
+  /* border: solid 2px  #005070; */
+  line-height: 1.3;
+  box-shadow: black 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color:#005070;
+}
+
+
+#jordanRiver img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+  position: relative;
+  left: 600px;
+  bottom: 570px;
+}
+
+#jordanRiver h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+  position: relative;
+  left: 600px;
+  bottom: 570px;
+
+}
+
+#kingtalalDom img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#kingtalalDom h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+#wadiHidan img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#wadiHidan h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+
+#wadiMujib img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+  
+}
+
+#wadiMujib h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+
+#wadiRum img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#wadiRum h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+#deadSea img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#deadSea h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+#maenHot img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#maenHot h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+#TempleArtemis img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#TempleArtemis h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+
+#TempleHercules img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#TempleHercules h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+
+#TreasuryPetra img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#TreasuryPetra h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+#UmmQais img{
+  width: 500px;
+  height: 350px;
+  margin-left: 50px;
+  border: solid 2px #005070;
+  box-shadow: #005070 2px 2px 4px;
+}
+
+#UmmQais h3{
+  font-size: 25px;
+  margin-left: 50px;
+  width: 500px;
+  border: solid 2px  #005070;
+  line-height: 1.3;
+  box-shadow: #005070 2px 2px 4px;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  color: #005070;
+
+}
+
+
+footer {
 	clear: both;
 }
-/*
-.button1{
-  width: 250px;
-  height: 60px;
-  position: relative;
-  left: 40px;
-  bottom: 250px;
-  background-image: url(/images/like.jpg);
-} 
-
-.button2{
-  width: 250px;
-  height: 60px;
-  position: relative;
-  left: 100px;
-  bottom: 310px;
-  background-image: url(/images/dislike.jpg);
-
-}   
-*/
 
 #alaraysPool .button1{
   width: 250px;
   height: 40px;
   position: relative;
-  left: 700px;
-  bottom: 110px;
+  left: 300px;
+  bottom: 45px;
   background-color:white;
 }
 
 #jordanRiver .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 270px;
+  left: 700px;
+  bottom: 110px;
 }
 
 #kingtalalDom .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 175px;
+  left: 700px;
+  bottom: 110px;
 }
 
 
 #wadiHidan .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 325px;
+  left: 700px;
+  bottom: 110px;
 }
 
 
 #wadiMujib .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 450px;
+  left: 700px;
+  bottom: 110px;
 }
 
 
 #wadiRum .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 450px;
+  left: 700px;
+  bottom: 110px;
 }
 
 
 #deadSea .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 300px;
+  left: 700px;
+  bottom: 110px;
 }
 
 
 #maenHot .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 270px;
+  left: 700px;
+  bottom: 110px;
 }
 
 #TempleArtemis .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 150px;
+  left: 700px;
+  bottom: 110px;
 }
 
 #TempleHercules .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 210px;
+  left: 700px;
+  bottom: 110px;
 }
 
 #TreasuryPetra .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
-  left: 450px;
-  bottom: 270px;
+  left: 700px;
+  bottom: 110px;
 }
 
 #UmmQais .button1{
   width: 250px;
-  height: 60px;
+  height: 40px;
   position: relative;
   left: 450px;
   bottom: 210px;
 }
+
