--- a/styles/people.css
+++ b/styles/people.css
@@ -1,27 +1,36 @@
 
+body{
+  background: linear-gradient(45deg(blue ,red));
+}
+main.peoole{
+  position: relative;
+  top: 200px;
+}
 #people img {
-    display: flex;
-      width: 700px;
-      height:500px;
-    margin-left: 450px;
-    margin-right: auto;
-    border:  solid #00000057 2px;
-    box-shadow: 3px 3px 6px #0000006b;
+  display: flex;
+  width: 1000px;
+  height: 500px;
+  margin-left: 457px;
+  border-radius: 5px;
+  margin-right: auto;
+  border: solid #00000057 2px;
+  box-shadow: 3px 3px 6px #0000006b;
     
   }
   
   
   #people h3{
-     /* clear: both; */
-      font-size: 50px;
-      font-weight: bold;
-      position: relative;
-      bottom: 500px;
-      margin-left: 90px;
-      font-family: 'EB Garamond', serif;
-      color: #005070;
-  
-  
+    display: inline-block;
+    font-size: 50px;
+    justify-content: space-around;
+    flex-direction: column;
+    font-weight: bold;
+    position: relative;
+    bottom: 344px;
+    margin-left: 90px;
+    left: 100px;
+    font-family: 'EB Garamond', serif;
+    color: #005070;
   }
   #first-header,.first-header{
 
@@ -39,19 +48,31 @@
   }
   .first-header,image{
     /* border-radius: 5px; */
-    height: 400px;
-    width: 1550px;
-    background-image: url(../images/vibrant-night-sky-with-stars-nebula-galaxy.jpg);
-    background-attachment:fixed ;
+    height:500px;
+    width: 100%
+    /* border-radius: 10px; */
   }
-#people p{
-    font-size: 19px;
-    width: 22%;
-    margin-top: 30px;
-    line-height: 1.6;
-    color: black;
+
+  .first-header{
+    background-image: url(../images/vibrant-night-sky-with-stars-nebula-galaxy.jpg);
+    background-attachment:fixed;
+    background-size: 1790px;
+    
+    /* border-radius: 10px; */
+  }
+#people p ,h2{
+  font-size: 19px;
+  width: 100%;
+  /* display: flex; */
+  margin-top: 30px;
+  line-height: 1.6;
+  color: black;
    }
 
  footer {
 	clear: both;
+}
+
+#peopleInfo{
+  
 }
