--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -1,600 +1,144 @@
-
-#places {
-  margin-top: 100px;
+/* *{
+  font-family: 'Caladea', serif;
+} */
+.row {
+  width: 100%;
+  display: flex;
 }
 
-#first-header{
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  font-size: 50px;
-  text-align: center;
+.column2 ,.column1{
+  width: 42%;
+  margin: auto;
+  
+}
+
+#places img{
+  width: 550px;
+  height: 300px;
+  border-radius: 10px 10px 0px 0px ;
+  /* float: left; */
+}
+
+.imageDiv{
+  width: 550px;
+  height: 580px;
+  border: 1px solid #000000e3;
   margin-top: 50px;
-  color: #005070;
-}
-
-#main-prgh{
-  width: 50%;
-  text-align: center;
-  font-size: 25px;
-  line-height: 1.6;
-  margin-left: 338px;
-  margin-top: 30px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-}
-
-#cities{
-  text-align: center;
-  margin-top: 50px;
-  font-size: 50px;
-  color: #005070;
   margin-bottom: 50px;
+  box-shadow: 1px 1px 14px 0px;
+  border-radius: 10px;
+}
+.place-title{
+  font-size: 30px;
+  color: #005070;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+}
+
+.desc{
+  font-size: 18px;
+	color: #70695F;
+  line-height: 1.6;
+  text-align: center;
+  padding: 20px;
+}
+
+.rate{
+  text-align: center;
+}
+
+#pop-cities{
+  padding-top: 60px;
+  width: 100%;
+  margin: auto;
+}
+.ss{
+  display: inline-block;
+  width: 22%;
+  margin-left: 33px;
+}
+
+#pop-cities h1{
+  font-size: 30px;
+	font-weight: bolder;
+  padding: 60px 0px 60px 0px;
+  letter-spacing:0.2em;
+	color:#005070;
+	text-align: center;
+}
+
+#pop-cities img{
+  box-shadow: 2px 2px 4px #005070;
+  /* margin-left: 33px; */
+
+}
+
+#pop-cities img:hover{
+  transform: scale(1.09);
 }
 
 #amman{
-  margin-left: 80px;
-  margin-right: 30px;
-  width: 20%;
-  box-shadow: 2px 2px 4px #005070;
-
+  width: 290px;
+  height: 260px;
+  
 }
-#amman:hover{
-  transform: scale(1.09);
+#amman h2 p{
+  margin-left: 10px;
 }
-
-#amman-h{
-  margin-left: 80px;
-  font-size: 20px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  line-height: 1.6;
-  position: relative;
-  bottom: 20px;
-}
-
-#amman-p{
-  margin-left: 80px;
-  font-size: 18px;
-  font-family: 'EB Garamond', serif;
-  position: relative; 
-  bottom: 20px;
-}
-
-
-#aqaba{
-  height: 320px;
-  margin-right: 30px;
-  width: 20%;
-  box-shadow: 2px 2px 4px #005070;
-
-}
-#aqaba:hover{
-  transform: scale(1.09);
-}
-
-#aqaba-h{
-  font-size: 20px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  position: relative;
-  left: 390px;
-  line-height: 1.6;
-  bottom: 45px;
-
-}
-
-#aqaba-p{
-  font-size: 18px;
-  font-family: 'EB Garamond', serif;
-  position: relative;
-  left: 390px;
-  bottom: 45px;
-}
-
-#jarash{
-  height: 320px;
-  margin-right: 30px;
-  width: 20%;
-  box-shadow: 2px 2px 4px #005070;
-
-}
-
-#jarash:hover{
-  transform: scale(1.09);
-}
-
-#jerash-h{
-  font-size: 20px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  position: relative;
-  left: 700px;
-  line-height: 1.6;
-  bottom: 93px;
-
-}
-
-#jerash-p{
-  font-size: 18px;
-  font-family: 'EB Garamond', serif;
-  position: relative;
-  left: 700px;
-  bottom: 93px;
-}
-
 
 #madaba{
-  width: 20%;
-  box-shadow: 2px 2px 4px #005070;
-
+  width: 290px;
+  height: 260px;
 }
 
-#madaba:hover{
-  transform: scale(1.09);
+#pop-cities h2{
+  padding-top: 10px;
+  font-size: 30px;
+	font-weight: bolder;
+  letter-spacing:0.2em;
+	color:#005070;
+	text-align: center;
 }
 
-#madaba-h{
-  font-size: 20px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  position: relative;
-  left: 1000px;
+#pop-cities p{
+	color: #70695F;
   line-height: 1.6;
-  bottom: 170px;
-
+	font-size: 15px;
+  text-align: center;
+  padding-bottom: 60px;
 }
-
-#madaba-p{
-  font-size: 18px;
-  font-family: 'EB Garamond', serif;
-  position: relative;
-  left: 1000px;
-  bottom: 170px;
-}
-/* 
-#places img {
-  display: block;
-	width: 700px;
-	height:500px;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 3px 3px 6px #005070;
-  
-} */
-
-/* 
-#places h3{
-    font-size: 50px;
-    font-weight: bold;
-    color: #005070;
-    position: relative;
-    bottom: 570px;
-    margin-left: 325px;
-    font-family: 'EB Garamond', serif;
-}
- */
-/* 
-
-#places p{
-    font-size: 19px;
-    width: 68%;
-    margin-top: 30px;
-    line-height: 1.6;
-    color: black;
-    position: relative;
-    top: 500px;
-} */
-
-#prgh{
-  font-size: 18px;
-  color:#70695F;
-}
-
-#prgh2{
-  font-size: 18px;
-  color: black;
-}
-
-#alaraysPool img{
-  width: 500px;
-  height: 350px;
-  margin-left: 70px;
-  border: solid 2px black;
-  box-shadow: black 2px 2px 4px;
-}
-
-#alaraysPool h3{
-  font-size: 25px;
-  margin-left: 70px;
-  width: 500px;
-  border: solid 2px  black;
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color:#005070;
-  
-}
-
-
-#jordanRiver img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px black;
-  box-shadow: black 2px 2px 4px;
-  position: relative;
-  left: 600px;
-  bottom: 520px;
-}
-
-#jordanRiver h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  black;
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  position: relative;
-  left: 600px;
-  bottom: 520px;
-  padding-bottom: 25px;
-}
-
-#kingtalalDom img{
-  width: 500px;
-  height: 350px;
-  margin-left: 70px;
-  border: solid 2px black;
-  box-shadow: black 2px 2px 4px;
-  position: relative;
-  bottom: 500px;
-}
-
-#kingtalalDom h3{
-  font-size: 25px;
-  margin-left: 70px;
-  width: 500px;
-  border: solid 2px  black;
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  position: relative;
-  bottom: 500px;
-  
-
-}
-
-#wadiHidan img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px black;
-  box-shadow: black 2px 2px 4px;
-  position: relative;
-  left: 600px;
-  bottom: 970px;
-}
-
-#wadiHidan h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  black;
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  position: relative;
-  left: 600px;
-  bottom: 970px;
-  padding-bottom: 30px;
-
-}
-
-
-#wadiMujib img{
-  width: 500px;
-  height: 350px;
-  margin-left: 70px;
-  border: solid 2px  black;
-  box-shadow: black 2px 2px 4px;
-  position: relative;
-  bottom: 1000px;
-}
-
-#wadiMujib h3{
-  font-size: 25px;
-  margin-left: 70px;
-  width: 500px;
-  border-left: solid 2px  black;
-  border-bottom: solid 2px  black;
-  border-right: solid 2px  black;
-
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  position: relative;
-  bottom: 1000px;
-  padding-bottom: 30px;
-}
-
-
-#wadiRum img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px black;
-  box-shadow: black 2px 2px 4px;
-  position: relative;
-  left: 600px;
-  bottom: 1550px;
-}
-
-#wadiRum h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  black;
-  line-height: 1.3;
-  box-shadow: black 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  position: relative;
-  left: 600px;
-  bottom: 1550px;
-  padding-bottom: 30px;
-}
-
-#deadSea img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#deadSea h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-  
-}
-
-#maenHot img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#maenHot h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-
-}
-
-#TempleArtemis img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#TempleArtemis h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-
-}
-
-
-#TempleHercules img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#TempleHercules h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-
-}
-
-
-#TreasuryPetra img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#TreasuryPetra h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-
-}
-
-#UmmQais img{
-  width: 500px;
-  height: 350px;
-  margin-left: 50px;
-  border: solid 2px #005070;
-  box-shadow: #005070 2px 2px 4px;
-}
-
-#UmmQais h3{
-  font-size: 25px;
-  margin-left: 50px;
-  width: 500px;
-  border: solid 2px  #005070;
-  line-height: 1.3;
-  box-shadow: #005070 2px 2px 4px;
-  font-family: 'EB Garamond', serif;
-  font-weight: bold;
-  color: #005070;
-
-}
-
-
-footer {
-	clear: both;
-}
-
-#alaraysPool .button1{
-  width: 40px;
-  height: 40px;
-  position: relative;
-  left: 300px;
-  bottom: 45px;
-  background-color:white;
+.button1{
+  background-image: url(/images/heart-btn.png);
   border-radius: 50%;
-  
-}
-
-#alaraysPool .button1:hover{
-  background-color: #005070;
-}
-
-#jordanRiver .button1{
-  width: 250px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   position: relative;
-  left: 880px;
-  bottom: 565px;
-  background-color:white;
+  bottom: 35px;
+  left: 210px;
 
 }
 
-#kingtalalDom .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 300px;
-  bottom: 545px;
+#recom{
+  margin-top: 60px;
+  padding-top: 60px;
 }
 
-
-#wadiHidan .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 880px;
-  bottom: 1020px;
+#recom h1{
+  font-size: 30px;
+	font-weight: bolder;
+  padding: 20px;
+	color:#005070;
+	letter-spacing:0.1em;
+  text-align: center;
 }
 
-
-#wadiMujib .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 300px;
-  bottom: 1050px;
-}
-
-
-#wadiRum .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 880px;
-  bottom: 1600px;
-}
-
-
-#deadSea .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 700px;
-  bottom: 110px;
-}
-
-
-#maenHot .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 700px;
-  bottom: 110px;
-}
-
-#TempleArtemis .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 700px;
-  bottom: 110px;
-}
-
-#TempleHercules .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 700px;
-  bottom: 110px;
-}
-
-#TreasuryPetra .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 700px;
-  bottom: 110px;
-}
-
-#UmmQais .button1{
-  width: 250px;
-  height: 40px;
-  position: relative;
-  left: 450px;
-  bottom: 210px;
+#recom p{
+  padding: 20px;
+	color: #70695F;
+  line-height: 25px;
+	font-size: 20px;
+  text-align: center;
+  padding-bottom: 60px;
 }
 
