--- a/styles/people.css
+++ b/styles/people.css
@@ -1,78 +1,153 @@
-
+.table {
+  width: 100%;
+  top: 10px;
+  /* padding-bottom: -1000px; */
+}
 body{
-  background: linear-gradient(45deg(blue ,red));
+  background-color: #00000011;
 }
-main.peoole{
-  position: relative;
-  top: 200px;
+/* 
+#people2 {
+  width: 50%;
+  float: right;
+  border: black;
+} */
+
+#people {
+  width: 100%;
+  /* float: left; */
 }
+
 #people img {
   display: flex;
+  border-radius: 20px;
   width: 1000px;
+  height: 600px;
+  margin-left: 160px;
+  box-shadow: 5px 10px #00000049;
+}
+.fa-map-marker:before {
+  content: "\f041";
+  margin-right: 10px;
+}
+.fa-phone:before {
+  content: "\f095";
+  margin-right: 10px;
+}
+
+/* #people2 img {
+  display: flex;
+    border-radius: 20px;
+    width: 75%;
+    height: 500px;
+    margin-left: 30px;
+} */
+
+/* .test {
+display: flex;
+flex-direction: column;
+} */
+
+/* main.peoole{
+  position: relative;
+  top: 200px;
+} */
+
+/* .clear{
+  clear: both;
+} */
+
+#people span h3{
+  box-shadow: 2px solid black;
+
+}
+#people h3 {
+  border-radius: 10px;
+  padding-top: 10px;
+  bottom: 600px;
+  border: 2px solid black;
+  font-size: 50px;
+  
+  flex-direction: column;
+  height: 446px;
+  display: flex;
+  margin: auto;
+  position: relative;
+  text-align: center;
+  left: 1100px;
+  width: 223px;
+  font-weight: bold;
+  margin-left: 265px;
+  font-family: 'EB Garamond', serif;
+  color: #005070;
+}
+
+#people h3 h2, #people h3 p {
+  padding-top: 110px;
+}
+
+/* #people2 h3 {
+  font-size: 50px;
+      flex-direction: column;
+      display: flex;
+      justify-content: space-around;
+      font-weight: bold;
+      position: relative;
+      bottom: 501px;
+      margin-left: 90px;
+      left: 721px;
+      font-family: 'EB Garamond', serif;
+      color: #005070;
+} */
+
+#first-header, .first-header {
+  text-align: center;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
+  font-size: 50px;
+  margin-top: 50px;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.first-header, image {
+  /* border-radius: 5px; */
   height: 500px;
-  margin-left: 457px;
-  border-radius: 5px;
-  margin-right: auto;
-  border: solid #00000057 2px;
-  box-shadow: 3px 3px 6px #0000006b;
-    
-  }
-  
-  
-  #people h3{
-    display: inline-block;
-    font-size: 50px;
-    justify-content: space-around;
-    flex-direction: column;
-    font-weight: bold;
-    position: relative;
-    bottom: 344px;
-    margin-left: 90px;
-    left: 100px;
-    font-family: 'EB Garamond', serif;
-    color: #005070;
-  }
-  #first-header,.first-header{
+  width: 100%
+  /* border-radius: 10px; */
+}
 
-    text-align: center;
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-    justify-content: center;
-    font-family: 'EB Garamond', serif;
-    font-weight: bold;
-    font-size: 50px;
-    margin-top: 50px;
-    color: white;
-    margin-bottom: 30px;
-  }
-  .first-header,image{
-    /* border-radius: 5px; */
-    height:500px;
-    width: 100%
-    /* border-radius: 10px; */
-  }
+.first-header {
+  background-image: url(../images/vibrant-night-sky-with-stars-nebula-galaxy.jpg);
+  background-attachment: fixed;
+  background-size: 1899px;
+  /* border-radius: 10px; */
+}
 
-  .first-header{
-    background-image: url(../images/vibrant-night-sky-with-stars-nebula-galaxy.jpg);
-    background-attachment:fixed;
-    background-size: 1790px;
-    
-    /* border-radius: 10px; */
-  }
-#people p ,h2{
-  font-size: 19px;
+#people p, h2 {
+  font-size: 20px;
   width: 100%;
   /* display: flex; */
   margin-top: 30px;
   line-height: 1.6;
   color: black;
-   }
-
- footer {
-	clear: both;
 }
 
-#peopleInfo{
-  
+#people2 p, h2 {
+  font-size: 25px;
+  width: 100%;
+  /* display: flex; */
+  margin-top: 30px;
+  line-height: 1.6;
+  color: black;
 }
+
+footer {
+  clear: both;
+}
+
+#peopleInfo {}
