--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,6 +255,9 @@ header #navbar, #left-nav , ul{
 	color: #f0fbff;
 }
 
+#left-nav ul li a:hover{
+	color:#0089BB;
+}
 #left-nav i:hover{
 	color: #0089BB;
 }
@@ -306,12 +309,12 @@ header #navbar, #left-nav , ul{
     text-decoration: none;
 	font-family: 'Caladea', serif;
 }
-#left-nav ul li a:hover{
-	color:  #0089BB;
-}
-#left-nav ul li a:active{
-	color: #005070;
-}
+
+/* #left-nav ul li a:active{
+	color: #700034;
+	background-color: burlywood;
+} */
+
 
 
 header ul li{
@@ -346,9 +349,6 @@ footer ul li{
     display: inline-block;
 	margin: 60px;
 }
-#left-nav ul li a:active {
-	color: #005070;
-  }
 
 /* --- Testimonials --- */
 
@@ -584,14 +584,15 @@ footer ul li{
 }
 .Rate{
 	position: relative;
-    bottom: 180px;
-	right: 80px;
-    background-color: whitesmoke;
+    bottom: 220px;
+	left: 110px;
+    /* background-color: whitesmoke; */
     padding-right: 0px;
 }
 
 .Rate i {
-	color: #005070;
+	color: #e4e4de;
+    font-size: 20px;
 }
 #top-rated-container h3{
 	font-size: 30px;
@@ -609,12 +610,14 @@ footer ul li{
   /* relevant styles */
 .img__wrap {
 	position: relative;
-    height: 200px;
-    width: 257px;
+    height: 240px;
+    width: 240px;
     display: inline-block;
-    margin-left: 8px;
+    margin-left: 25px;
     box-shadow: 1px 7px 4px 0px;
-    color: #0303039a;;
+    color: #0303039a;
+    border: 1px solid black;
+    margin-bottom: 60px;
   }
   .img__description a{
 	  color: #fff;
@@ -632,7 +635,10 @@ footer ul li{
     opacity: 0;
     transition: opacity .2s, visibility .2s;
     padding-top: 90px;
-    padding-left: 85px;
+    padding-left: 10px;
+	padding-right: 10px;
+	font-size: 30px;
+	text-align: center;
   
 	/* transition effect. not necessary */
 	transition: opacity .2s, visibility .2s;
@@ -642,5 +648,8 @@ footer ul li{
 	visibility: visible;
 	opacity: 1;
   }
-
+  .img__wrap:hover{
+	transform: scale(1.1);
+  }
+ 
 /* --- End of Images-top-rated---*/
