--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -113,7 +113,7 @@
   padding-bottom: 60px;
 }
 .button1{
-  background-image: url(/images/star23.jpg);
+  background-image: url(/images/star23.JPG);
   border-radius: 50%;
   width: 50px;
   height: 50px;
