--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -12,7 +12,7 @@
   
 }
 
-#places img{
+.placeImageRecom{
   width: 550px;
   height: 300px;
   border-radius: 10px 10px 0px 0px ;
@@ -113,16 +113,13 @@
   padding-bottom: 60px;
 }
 .button1{
-  background-image: url(/images/Star23.jpg);
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 50px ;
+  height: 50px ;
   position: relative;
   bottom: 48px;
   left: 490px;
-  background-size: cover;
-  padding: 20px;
-  border: 0px;
+
 }
 
 .button1:hover{
