--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -46,10 +46,10 @@
 
 .rate{
   text-align: center;
-  margin-top: 60px;
+  margin-top: 42px;
   margin-left: 400px;
-  font-size: 18px;
-  padding-bottom: 5px;
+  font-size: 22px;
+  margin-bottom: 10px;
 }
 
 #pop-cities{
@@ -117,7 +117,7 @@
   width: 50px ;
   height: 50px ;
   position: relative;
-  bottom: 48px;
+  bottom: 50px;
   left: 490px;
 
 }
